<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">İlaç Hatırlatıcı</string>
    <string name="ac">Aç</string>
    <string name="kapa">Kapa</string>
    <string name="ilac_guncelle_toast">İlaç Güncelleme Başarılı</string>
    <string name="ilac_liste">İlaç Listele</string>
    <string name="galeri_ac">Galeri Aç</string>
    <string name="kamera_ac">Kamera Aç</string>
    <string name="ambulance">Ambulans 112</string>
    <string name="fire_depertman">İtfaiye 110</string>
    <string name="alo_doctor">Alo Doktor 113</string>
    <string name="police">Polis 155</string>
    <string name="healt_information">Sağlık Danışmanı 184</string>
    <string name="many_meters">Kaç Adım</string>
    <string name="explation">Açıklama</string>
    <string name="save_btn">Kaydet</string>
    <string name="weight_hint">Ağırlık(kg)</string>
    <string name="step_text">adım</string>
    <string name="medicine_big_text">İLAÇLAR</string>
    <string name="morning_text">SABAH</string>
    <string name="noon_text">ÖĞLE</string>
    <string name="afternoon_text">İKİNDİ</string>
    <string name="night_text">GECE</string>
    <string name="kilo_text">kilo</string>
    <string name="harcanan_cal">Harcanan Kalori(cal)</string>
    <string name="appointment_take">Randevu almak için tıklayınız.</string>
    <string name="appointment_add">Randevu Eklemek için tıklayınız.</string>
    <string name="almost_done">BİTMEK ÜZERE</string>
    <string name="day_text">gün</string>
    <string name="medicine_save_big_text">İLAÇ KAYDI</string>
    <string name="medicine_name">İlacın adı</string>
    <string name="explation_medic">Açıklama</string>
    <string name="hungry_satiated">Aç-Tok</string>
    <string name="how_many">Kaç Tane</string>
    <string name="time">Süre</string>
    <string name="medicine_photo">İlacın Fotoğrafı</string>
    <string name="kayit_tamamlandi_toast">Kayıt işlemi başarıyla gerçekleşti.</string>
    <string name="registred_medicines">Kayıtlı İlaçlar</string>
    <string name="registred_alarms">Kayıtlı Alarmlar</string>
    <string name="ending">Günü Bitiyor</string>
    <string name="enter_measurement">Ölçüm gir</string>
    <string name="make_appointment">Randevu Al</string>
    <string name="set_alarm">Alarmı Ayarla</string>
    <string name="medicine_save">İlaç Kaydet</string>
    <string name="emergency_numbers">Acil Numaralar</string>
    <string name="registred_appointment">Kayıtlı Randevular</string>
    <string name="not_available_medicine">KAYITLI İLAÇ MEVCUT DEĞİL</string>
    <string name="update_alert">Güncellemek istediğnizden emin misiniz?</string>
    <string name="yes_text">Evet</string>
    <string name="no_text">Hayır</string>
    <string name="delete_registration_toast">Kayıt başarıyla silindi.</string>
    <string name="blood_pressure">Kan Basıncı(mmHg)</string>
    <string name="blood_sugar">Kan Şekeri(mg/dl)</string>
    <string name="cholesterol">Kolesterol</string>
    <string name="choose_medication">İlaç Seçiniz</string>
    <string name="medicine_explation">İlaç Açıklması</string>
    <string name="medicine_image">İlaç Fotoğrafı</string>
    <string name="alarm_added">Alarm Eklendi</string>
    <string name="medic_time">İlaç Zamanı</string>
    <string name="did_you_take">İlacı aldın mı?</string>
    <string name="pulse">nabız</string>
    <string name="weight_add">Ağırlık Ekle</string>
    <string name="blood_sugar_add">Kan Şekeri Ekle</string>
    <string name="pulse_number_add">Nabız Ekle</string>
    <string name="blood_pressure_add">Kan Basıncı Ekle</string>
    <string name="give_cal_add">Harcanan Kalori Ekle</string>
    <string name="take_cal_add">Alınan Kalori Ekle</string>
    <string name="cholesterol_add">Kolestrol Ekle</string>
    <string name="body_temperature">Vucut Sıcaklığı Ekle</string>
    <string name="appointment">RANDEVU</string>
    <string name="hospital_name">Hastanenin Adı</string>
    <string name="policlinic">Polikilinik</string>
    <string name="doctor_name">Doktorun Adı</string>
    <string name="choose_date">Tarih Seç</string>
    <string name="choose_hour">Saati Seç</string>
    <string name="appointment_register">Randevuyu Kaydet</string>
    <string name="date_text">Tarih</string>
    <string name="hour_text">Saat</string>
    <string name="take_cal">Tüketilen kalori(cal)</string>
    <string name="body_temp">Vucut Sıcaklığı</string>
    <string name="no_measurement">Ölçüm girilmemiş.</string>
    <string name="take_weight">kilo aldın.</string>
    <string name="lose_weight">kilo verdin.</string>
    <string name="toast_step_much">adım fazla yürüdün.</string>
    <string name="toast_step_little">adım az yürüdün.</string>
    <string name="step">adım</string>
    <string name="cancel">İptal</string>
    <string name="take">Aldım</string>
    <string name="later">Sonra</string>
    <string name="no_registered_medicine">İlk önce ilaç kaydetmelisiniz.</string>
    <string name="set_want_alarm">Kaydettiğiniz ilaç için alarm ayarlamak ister misiniz misiniz?</string>
    <string name="warning">Uyarı</string>
    <string name="ok_text">Tamam</string>
    <string name="alarm_count_full">İlacın alarm sayısı doldu!</string>
    <string name="delete_ques_alert">Silmek istediğnizden emin misiniz?</string>
    <string name="almadiklarin">Aksattığın İlaçlar</string>
    <string name="step_count">Adım Sayısı Ekle</string>
    <string name="alreadt_select">Zaten bir defa seçim yaptınız.</string>
    <string name="alarm_delayed_toast">Alarm ertelendi.</string>
    <string name="delete_complated">Silme işlemi tamamlandı.</string>
    <string name="for_health">SAĞLIĞINIZ İÇİN</string>
    <string name="healt_for_explation">İlaç saati hatırlatıcı sizin sağlığınız için yapılmış bir uygulamadır.</string>
    <string name="healt_for_explation2">İlacınıza dair her şeyi kaydedip size hatırlatması için uygulamaya komut verebilirsiniz.</string>
    <string name="healt_for_explation3">İlacınıza alarm kurun ve Alarm Saati Hatırlatıcı ilacınızı alana kadar peşinizi bırakmasın.</string>
    <string name="healt_for_explation4">Şeker,kolestrol veya tansiyon ölçülerinizi günlük olarak giriş yapabilir ve grafikten kolaylıkla takip edebilirsiniz.</string>
    <string name="skip_text">Atla</string>
    <string name="next_text">Sonraki</string>
    <string name="my_preference">ne oldugu belirsinz</string>
    <string name="my_preference_key">ne oldugu belirsin2</string>
    <string name="start_text">Başla</string>
    <string name="infor_medicine_save">Öncelikle ilacınızı kaydederek başlayabiliriz.İlacınızın elinizde ne kadar bulunduğunu, fotoğrafını adını, açılamasını... ekleyerek ilacınızı tanımanız daha kolaylaşacak.</string>
    <string name="lets_start">Hadi Başlayalım</string>
    <string name="appointment_time">Randevunuz 2 saat sonra unutmayınız.</string>
    <string name="appointment_info">Ayrıntı için tıklayınız.</string>
    <string name="mevcut">İlaçtan ne kadar mevcut</string>
    <string name="info_alarm">Siz alarm listele bölümünden alarmı silene kadar alarm günlük olarak devam etmektedir.</string>
    <string name="medicine_is_end">İlaç mevcut değil.</string>
    <string name="delete_ques_alert_medic">Silmek istediğnizden emin misiniz? ALARMLAR DA SİLİNECEK</string>
    <string name="alarmlar_text">ALARMLAR</string>
    <string name="app_star">Uygulamayı değerlendirmek ister misiniz?</string>
    <string name="ana_sayfa_text">Ana Sayfa</string>
    <string name="search_text">  Arama</string>
    <string name="sosyal_medya">Bizi Takip Edin</string>
    <string name="app_abouth">Hakkımızda</string>
    <string name="connect_me">İstekleriniz</string>
    <string name="instagram">İnstagram</string>
    <string name="twitter">Twitter</string>
    <string name="gmail">Gmail</string>
    <string name="informaition_application">Sağlığınızı en az sizin kadar düşünen İLAÇ SAATİ HATIRLATICI ile ilaçlarınızı almayı unutmayacaksınız.Anı zamanda ölçümlerinizi düzenli şekilde tutup artış ve azalmaları değerlendirebileceksiniz.Hastane randevularınızı da kaydedip unutmamanızı sağlayabilirsiniz.Ayrıca ilaçlarınız bitmeye yaklaştığında uyarı vermektedir daha nice özellik İLAÇ SAATİ HATIRLATICI içerisinde mevcut.Her yönüyle kullanıcı dostu bir uygulamadır kullanıcıların sağlık konusunda bütün isteklerini tek bir uygulama ile karşılayabilmesi için tasarlanmıştır.</string>
    <string name="app_name_big_text">İLAÇ SAATİ HATIRLATICI</string>
    <string name="oner_text">Uygulamayı ihtiyacı olanlara da önerebilirsiniz.</string>
    <string name="tavsiye_text">Tavsiyelerimiz</string>
    <string name="send_pdf">Pdf Olarak Doktoruna Gönder</string>
    <string name="explation_date">Ölçüm Tarihi</string>
    <string name="seker_deger">Ölçüm değeri</string>
    <string name="hello_text">Merhaba,</string>
    <string name="seker_long_text">Aşağıdaki tabloda ölçtüğüm ve kaydettiğim şeker değerlerim ölçüm saatleriyle beraber mevcuttur.</string>
    <string name="creating_pdf">Pdf hazırlanıyor..</string>
    <string name="installing_text">Yükleniyor...</string>
    <string name="olcum_tablosu">Ölçüm Tablosu</string>
    <string name="app_name_small">ilaç saati hatirlatici</string>
    <string name="grafik">Grafik</string>
    <string name="title_olcum_grafik">olcum ve grafik</string>
</resources>
