<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acilNumberActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_ambulance"
            android:onClick="ambulansClick"
            android:text="@string/ambulance"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textColor="#000000" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_fire_extinguisher"
            android:onClick="itfaiyeClick"
            android:text="@string/fire_depertman"
            android:background="#ffffff"

            android:textColor="#000000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_police_car"
            android:onClick="polisClick"
            android:text="@string/police"
            android:background="#ffffff"
            android:textColor="#000000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_doctor"
            android:onClick="doktorClick"
            android:text="@string/alo_doctor"
            android:background="#ffffff"
            android:textColor="#000000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_care"
            android:onClick="saglikDanismaClick"
            android:text="@string/healt_information"
            android:background="#ffffff"
            android:textColor="#000000"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>