<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mehme.ilacsaati.informationActivity"
   android:background="@mipmap/ic_launcher_infromation_back">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="215dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/infor_medicine_save"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/kaydetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginBottom="130dp"
        android:background="@drawable/border"
        android:onClick="baslaClicked"
        android:text="@string/lets_start"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"></android.support.v4.view.ViewPager>
    <View
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:alpha=".5"
        android:layout_above="@+id/dotsLayout"
        android:layout_marginBottom="15dp"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dotsLayout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="55sp"></LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_text"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:id="@+id/bnSkip"
        android:layout_marginBottom="8sp"
        android:textColor="#ffffff"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_text"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:id="@+id/bnNext"
        android:layout_marginBottom="8sp"
        android:textColor="#ffffff"/>

</RelativeLayout>
