<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".harcananKaloriActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/grafik"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <EditText
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/harcanan_cal"
                        android:id="@+id/nabizEt"
                        android:layout_marginRight="20dp"
                        android:inputType="number"/>
                    <EditText
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/harcananKaloriEt"
                        android:hint="@string/explation"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tarihTv"
                    android:textSize="20dp"
                    android:gravity="center"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="#F01A30"
                    android:onClick="harcananKaloriKaydetClicked"
                    android:text="@string/save_btn"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linList"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>