<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ilacAldinMiActivity"
    android:background="#ffffff"
    android:orientation="vertical">
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="200dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
            <TextView
               android:layout_width="match_parent"
               android:layout_height="35sp"
               android:id="@+id/TxilacAdi"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:id="@+id/TxilacAciklama"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:id="@+id/TxilacAcTok"
                android:layout_margin="10dp"/>
       </LinearLayout>
   </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@android:color/holo_blue_bright"
        android:layout_gravity="center"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="30dp"
    android:gravity="center"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="20dp">
    <Button
        android:id="@+id/iptal"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_x_button"
        android:onClick="iptalClicked" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="25sp"
            android:textColor="#000000"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginRight="20dp">
    <Button
        android:id="@+id/al"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_success"
        android:onClick="alClicked" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take"
            android:textSize="25sp"
            android:textColor="#000000"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
    <Button
        android:id="@+id/ertele"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_right_arrow"
        android:onClick="erteleClicked"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/later"
        android:textSize="25sp"
        android:textColor="#000000"
        />
</LinearLayout>
</LinearLayout>
</LinearLayout>